--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js",
+		"dev": "nodemon index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"express": "^4.17.1",
-		"mongoose": "^5.9.25"
+		"mongoose": "^5.9.25",
+		"mysql": "^2.18.1"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.4"
 	}
 }
