--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js",
-		"dev": "nodemon index.js",
+		"start": "node server/index.js",
+		"backend": "nodemon server/index.js",
+		"frontend": "npm run start --prefix client",
+		"dev": "concurrently \"npm run backend\" \"npm run frontend\"",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
@@ -20,6 +22,7 @@
 		"mysql": "^2.18.1"
 	},
 	"devDependencies": {
+		"concurrently": "^5.3.0",
 		"nodemon": "^2.0.4"
 	}
 }
